--- a/components/JunoComments.css
+++ b/components/JunoComments.css
@@ -3,10 +3,6 @@
     margin: 2rem 0;
 }
 
-.Comments .Comment__add {
-
-}
-
 .Comments .commentsItem {
     display: flex;
     padding: 20px 0;
@@ -29,12 +25,71 @@
 }
 
 .Comments .commentsItem__description {
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 .Comments .Comment__add {
     display: block;
-    font-size: 1rem;
-    padding: 10px 20px;
+    font-size: 1.2rem;
+    padding: 15px 20px;
+    background-color: rgb(34, 34, 34);
+    color: white;
+    border: none;
     margin: 0 auto;
 }
+
+.Comments textarea {
+    width: 100%;
+    border: 2px solid rgb(34, 34, 34);
+    height: 20vh;
+    padding: 10px;
+}
+
+.Comments .Comments__buttonWrapper {
+    display: flex;
+    justify-content: center;
+    column-gap: 10vw;
+    margin-top: 1rem;
+}
+
+.Comments .Comments__buttonWrapper button {
+    display: block;
+    font-size: 1.2rem;
+    background-color: rgb(34, 34, 34);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+}
+
+.loading__wrapper {
+    width: 10vw;
+    height: 10vw;
+    margin: 0 auto;
+}
+
+.lds-dual-ring {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    color: rgb(34, 34, 34);
+  }
+  .lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid rgb(34, 34, 34);
+    border-color: rgb(34, 34, 34) transparent rgb(34, 34, 34) transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+  }
+  @keyframes lds-dual-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+   
