--- a/components/JunoTour.css
+++ b/components/JunoTour.css
@@ -7,16 +7,27 @@
 
 .toursItem--active {
     flex-direction: row;
+    column-gap: 5vw;
     order: 0;
 }
 
 .toursItem .toursItem__photo {
+    width: 20vw;
+    min-width: 20vw;
+    height: 20vw;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.Tours__card .toursItem .toursItem__photo {
     width: 30vw;
     min-width: 30vw;
     height: 30vw;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: rgb(82, 82, 82);
 }
 
 .toursItem .toursItem__info {
@@ -28,10 +39,6 @@
 
 .toursItem .toursItem__name {
     font-size: 2rem;
-}
-
-.toursItem .toursItem__description {
-
 }
 
 .toursItem .toursItem__price {
@@ -54,10 +61,15 @@
     padding: 10px 0;
 }
 
+.toursItem button:hover {
+    background-color: rgb(70, 70, 70);
+}
+
 .toursItem__activeButtonBlock {
     display: flex;
     justify-content: space-around;
     width: 60vw;
+    margin: 0 auto;
     margin-bottom: 10vh;
 }
 
@@ -67,6 +79,11 @@
     background-color: rgb(34, 34, 34);
     color: rgba(255, 255, 255, 0.904);
     border: none;
+    margin-right: 2rem;
+}
+
+.toursItem__activeButtonBlock button:hover{
+    background-color: rgb(70, 70, 70);
 }
 
 .toursItem .toursItem__ticketColors {
@@ -77,7 +94,94 @@
     column-gap: 2px;
 }
 
+.toursItem .toursItem__ticketColorsTitle {
+    width: 100%;
+    display: block;
+}
+
 .toursItem .color {
     width: 2vw;
     height: 2vw;
+}
+
+.toursItem .color--active {
+    border: 1px solid black;
+}
+
+.toursItem .toursItem__price--active {
+    align-self: flex-end;
+    display: flex;
+    font-size: 2rem;
+}
+
+.toursItem__activeButtonBlock .toursItem__order:disabled {
+    background-color: rgb(104, 104, 104);
+    color: rgb(180, 180, 180);
+}
+
+.toursItem--viewed {
+    animation: fromHiddenToViewed 0.5s linear 1 forwards;
+}
+
+.toursItem--hidden {
+    animation: fromViewedToHidden 0.5s linear 1 forwards;
+}
+
+@keyframes fromHiddenToViewed {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fromViewedToHidden {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
+@media (orientation: portrait) {
+    .toursItem--active {
+        flex-direction: column;
+        column-gap: 10px;
+        align-items: center;
+    }
+
+    .Tours__card .toursItem .toursItem__photo {
+        width: 60vw;
+        height: 60vw;
+        min-width: 60vw;
+    }
+
+    .toursItem__activeButtonBlock button {
+        font-size: 2.5rem;
+    }
+
+    .toursItem .toursItem__price--active {
+        font-size: 4rem;
+    }
+
+    .toursItem .toursItem__description {
+        text-align: justify;
+    }   
+
+    .toursItem .toursItem__ticketColors {
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 5px;
+        width: 80vw;
+        column-gap: 5px;
+    }
+    
+    .toursItem .color {
+        width: 4vw;
+        height: 4vw;
+    }
 }
