--- a/components/UserCabinet.css
+++ b/components/UserCabinet.css
@@ -7,9 +7,10 @@
     background-color: rgb(34, 34, 34);
     color: white;
     width: 30vw;
-    min-height: 66.95vh;
+    min-height: 80vh;
     padding: 20px 30px;
     margin-left: -5vw;
+    flex-shrink: 0;
 }
 
 .UserCabinet .UserCabinet__navigation li {
@@ -31,4 +32,19 @@
     box-shadow: 1px 6px 10px black;
     background-color: rgb(77, 77, 77);
     color: white;
+}
+
+.UserCabinet .Comment__block {
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+.UserCabinet .Comment__name {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.UserCabinet .Comment__text {
+    font-size: 1.3rem;
 }
