--- a/pages/JunoMenu.css
+++ b/pages/JunoMenu.css
@@ -8,4 +8,19 @@
     font-size: 1.5rem;
     text-decoration: none;
     color: black;
+    padding: 5px 10px;
+}
+
+.pageMenu .pageMenu__item:hover {
+    background-color: rgb(155, 155, 155);
+}
+
+.pageMenu .pageMenu__item--active {
+    background-color: rgb(34, 34, 34);
+    color: white;
+}
+
+.pageMenu .pageMenu__item--active:hover {
+    background-color: rgb(34, 34, 34);
+    color: white;
 }
