--- a/pages/Page_Contacts.css
+++ b/pages/Page_Contacts.css
@@ -2,4 +2,15 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    column-gap: 2rem;
+    row-gap: 3rem;
+    margin-top: 2rem;
+}
+
+@media (orientation: portrait) {
+    .ContactsPage {
+        flex-wrap: nowrap;
+        flex-direction: column;
+        align-items: center;
+    }
 }
